--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head> 
 	<meta charset="UTF-8" />
 	<title>Phaser Template</title>
+	<script type="text/javascript" src="../node_modules/socket.io/node_modules/socket.io-client/socket.io.js"></script>
     <script type="text/javascript" src="../app/js/ship.js"></script>
     <script type="text/javascript" src="../app/js/phaser.min.js"></script>
 	<script type="text/javascript" src="../app/js/boot.js"></script>
@@ -10,13 +11,17 @@
 	<script type="text/javascript" src="../app/js/gametitle.js"></script>
 	<script type="text/javascript" src="../app/js/main.js"></script>
     <script type="text/javascript" src="../app/js/gameover.js"></script>
-    <style type="text/css">
+
+	<style type="text/css">
         body {
             margin: 0;
         }
     </style>
+
     <script type="text/javascript">
 		(function() {
+				var socket = io();
+				socket.connect('http://10.5.6.125:3000');
 
 				//Create a new game that fills the screen
 				game = new Phaser.Game(window.innerWidth * window.devicePixelRatio, window.innerHeight * window.devicePixelRatio, Phaser.AUTO);
