--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8" />
 	<title>Phaser Template</title>
 	<script type="text/javascript" src="../node_modules/socket.io/node_modules/socket.io-client/socket.io.js"></script>
-    <script type="text/javascript" src="../app/js/ship.js"></script>
-    <script type="text/javascript" src="../app/js/phaser.min.js"></script>
+        <script type="text/javascript" src="../app/js/shipManager.js"></script>
+        <script type="text/javascript" src="../app/js/phaser.min.js"></script>
 	<script type="text/javascript" src="../app/js/boot.js"></script>
 	<script type="text/javascript" src="../app/js/preload.js"></script>
 	<script type="text/javascript" src="../app/js/gametitle.js"></script>
